# cookie-stand-api

./: pyproject.toml  requirements.txt
book/: .env  settings.py  urls.py
bookapp/migrations/: 0001_initial.py
